# py-exe01

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/example01/: calculator.py  db.py
tests/: conftest.py  test_calculator.py  test_db.py  test_sum.py
